--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <header class="top-bar">
         <div class="container-header">
-            <div class="menu-icon" id="menuBtn">
+            <div class="menu-icon" id="menuBtn" href="#">
                 <span></span>
                 <span></span>
                 <span></span>
@@ -30,6 +30,7 @@
             </div>
         </div>
     </header>
+    
 
     <section class="hero-banner">
         <div class="hero-content">
@@ -38,30 +39,39 @@
             </div>
         </div>
     </section>
-    <section class="services">
-        <h2>خدمات التصميم الإبداعي</h2>
-        <div class="services-grid">
-            <div class="service-card">
-                <img src="./imag/a1.jpg" alt="" srcset="">
-                تصميم الهوية البصرية</div>
-            <div class="service-card">
-                <img src="./imag/a2.jpg" alt="" srcset="">
-                تصميم سوشيال ميديا</div>
-            <div class="service-card"> 
-                <img src="./imag/a3.jpg" alt="" srcset="">
-                ui/ux DESIGN </div>
-            <div class="service-card">
-                <img src="./imag/a4.jpg" alt="" srcset="">
-                تصميم للطباعه والنشر</div>
-            <div class="service-card">
-                <img src="./imag/a5.jpg" alt="" srcset="">
-                تصميم التسويق والاعلانات</div>
-            <div class="service-card">
-                <img src="./imag/a6.jpg" alt="" srcset="">
-                تصميم انفوجرافيك</div>
-
+   <section class="services-section">
+    <h2 class="section-title">خدمات التصميم الإبداعي</h2>
+    
+    <div class="services-container">
+        <div class="service-card">
+            <div class="icon-wrapper">
+                <img src="./imag/a1.jpg" alt="UI/UX Design">
+            </div>
+            <h3>UI/UX Design</h3>
         </div>
-    </section>
+
+        <div class="service-card">
+            <div class="icon-wrapper">
+                <img src="./imag/a2.jpg" alt="Social Media Design">
+            </div>
+            <h3>تصميم سوشيال ميديا</h3>
+        </div>
+
+        <div class="service-card">
+            <div class="icon-wrapper">
+                <img src="./imag/a3.jpg" alt="Visual Identity">
+            </div>
+            <h3>تصميم الهوية البصرية</h3>
+        </div>
+
+        <div class="service-card">
+            <div class="icon-wrapper">
+                <img src="./imag/a4.jpg" alt="Printing Design">
+            </div>
+            <h3>تصميم للطباعة والنشر</h3>
+        </div>
+    </div>
+</section>
   <section id="services-directory" class="services-directory">
     <div class="directory-container">
         <h2 class="directory-title">تصفح خدمات تصميم</h2>
@@ -116,7 +126,7 @@
 </section>
 <footer class="main-footer">
     <div class="footer-container">
-        <p>© 2025 GhayaTech. All rights reserved.</p>
+        <p>© 2026 GhayaTech. All rights reserved.</p>
     </div>
 </footer>
     <script src="script.js"></script>
