--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
 
 <body>
 
-    <header class="main-header">
+   <header class="main-header">
     <div class="container-header">
         <div class="right-section">
+            <!-- الهامبرجر فقط -->
             <div class="hamburger-menu" id="hamburgerBtn">
-                <span></span><span></span><span></span>
+                <span></span>
+                <span></span>
+                <span></span>
             </div>
         </div>
 
@@ -34,10 +37,11 @@
         </div>
     </div>
 
+    <!-- القائمة الجانبية (خارج container-header) -->
     <div class="side-nav" id="sideNav">
         <div class="close-menu" id="closeBtn">&times;</div>
         <ul class="nav-links">
-            <li><a href="#">الرئيسية</a></li>
+            <li><a href="index.html">الرئيسية</a></li>
             <li class="has-submenu">
                 <a href="#">خدماتنا <i class="fas fa-chevron-down"></i></a>
                 <ul class="submenu">
@@ -46,17 +50,14 @@
                     <li><a href="#">تسويق إلكتروني</a></li>
                 </ul>
             </li>
-            <li><a href="#">معرض الأعمال</a></li>
+            <li><a href="categories.html">معرض الأعمال</a></li>
             <li><a href="#">اتصل بنا</a></li>
         </ul>
     </div>
     <div class="overlay" id="navOverlay"></div>
 </header>
 
-
-
-
-    <section class="hero-banner">
+ <section class="hero-banner">
         <div class="hero-content">
             <div class="hero-image-container">
                 <img src="./imag/1.jpg" alt="Creative Design Services">
@@ -69,6 +70,7 @@
         <div class="services-container">
             <div class="service-card">
                 <div class="icon-wrapper" href="./Categories.html">
+                 <a href="./Categories.html"></a>
                     <img src="./imag/a1.jpg" alt="UI/UX Design">
                 </div>
                 <h3>UI/UX Design</h3>
@@ -76,6 +78,7 @@
 
             <div class="service-card">
                 <div class="icon-wrapper" href="./Categories.html">
+                    <a href="./Categories.html"></a>
                     <img src="./imag/a2.jpg" alt="Social Media Design">
                 </div>
                 <h3>تصميم سوشيال ميديا</h3>
@@ -83,6 +86,7 @@
 
             <div class="service-card">
                 <div class="icon-wrapper" href="./Categories.html">
+                <a href="./Categories.html"></a>
                     <img src="./imag/a3.jpg" alt="Visual Identity">
                 </div>
                 <h3>تصميم الهوية البصرية</h3>
@@ -90,6 +94,7 @@
 
             <div class="service-card">
                 <div class="icon-wrapper" href="./Categories.html">
+                    <a href="./Categories.html"></a>
                     <img src="./imag/a4.jpg" alt="Printing Design">
                 </div>
                 <h3>تصميم للطباعة والنشر</h3>
